[gd_scene load_steps=7 format=3 uid="uid://bymncluasfxc6"]

[ext_resource type="Script" path="res://space_challenge/Spaceships(Agents)/spaceship_DQN2.gd" id="1_rt7d0"]
[ext_resource type="Script" path="res://NN_DQN.gd" id="2_3l32j"]
[ext_resource type="ArrayMesh" uid="uid://d2cstfu5u7g54" path="res://external_assets/10475_Rocket_Ship_v1_L3.obj" id="3_jr1gf"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0otik"]
albedo_color = Color(1, 1, 0.34902, 1)
emission_enabled = true
emission = Color(1, 1, 0.34902, 1)
emission_energy_multiplier = 0.5

[sub_resource type="SphereMesh" id="SphereMesh_p0unw"]
material = SubResource("StandardMaterial3D_0otik")

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_5stq8"]

[node name="Spaceship_DQN2" type="RigidBody3D"]
collision_mask = 2
script = ExtResource("1_rt7d0")
gamma = 0.995
learning_rate = 0.2

[node name="NN_DQN" type="Node" parent="."]
script = ExtResource("2_3l32j")
networkShape = Array[int]([16, 20, 20, 4])

[node name="FIXED_DQN" type="Node" parent="."]
script = ExtResource("2_3l32j")
networkShape = Array[int]([16, 20, 20, 4])

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(0.003, 0, 0, 0, -0.003, 4.52987e-10, 0, -4.52987e-10, -0.003, 0, 0, 0.6)
mesh = ExtResource("3_jr1gf")

[node name="Exaust" type="MeshInstance3D" parent="."]
transform = Transform3D(0.15, 0, 0, 0, -0.15, 2.26494e-08, 0, -2.26494e-08, -0.15, 0, 0, 0.476049)
mesh = SubResource("SphereMesh_p0unw")
skeleton = NodePath("../MeshInstance3D")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, -2.18557e-08, -0.5, 0, 0.5, -2.18557e-08, 0, 0, 0)
shape = SubResource("CapsuleShape3D_5stq8")
